welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:10: error: reassignment to val
	dejaFait = dejaFait + 1
                 ^